<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    tools:context="de.eatgate.placessearch.activities.StartActivity">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/question"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_info" />
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/close_icon_w"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_close" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/menu_ic_"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_menu" />

</menu>
