<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.eatgate.placessearch.activities.StartActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/welcome_txt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewGPS"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/your_position" />

            <EditText
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:layout_marginBottom="5dp"
                android:id="@+id/search_word" />

            <Button
                android:id="@+id/btnToMap"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/eatgate_main_button"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/ToMap" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/searchLocTxt" />

            <Button
                android:id="@+id/btnToTxtSearch"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/eatgate_main_button"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/ToTxt" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
