<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollViewSinglePlace"
        style="@style/MainStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutFromImage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurantName" />

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/addresse" />

            <TextView
                android:id="@+id/adresse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_rating" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/bewertung"
                style="@style/TextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/include_open_hours"
                layout="@layout/openhours_layout" />

            <Button
                android:id="@+id/btnAddImgs"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/eatgate_main_button"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/plusShow" />


        </LinearLayout>

    </ScrollView>

    <!-- <ListView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/reviewList"
         style="@style/MainStyle"/>-->

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/placeImage"
        style="@style/TextStyle"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="20dp" />-->
</LinearLayout>