<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.eatgate.placessearch.activities.TakePhotoActivity">

    <ScrollView
        android:id="@+id/scrollViewSinglePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/linearlayoutx1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewATakePhoto"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/auswahlPhoto"
                android:textSize="@dimen/abc_text_size_large_material" />

            <Button
                android:id="@+id/btnCamera"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/eatgate_main_button"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/get_photo" />

            <Button
                android:id="@+id/btnToUpload"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btnCamera"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="39dp"
                android:background="@drawable/eatgate_main_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/get_gallery" />

            <TextView
                android:id="@+id/textView2"
                style="@style/MainStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/preview"
                android:textSize="24dp" />

            <!--  <ImageView
                  android:id="@+id/photo_image"
                  android:contentDescription=""
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="20dp"
                  style="@style/MainStyle"
                  android:visibility="visible"
                  android:layout_gravity="top|center_horizontal" /> -->

        </LinearLayout>
    </ScrollView>


</LinearLayout>
